test/errors/typecheck/method_on_wrong_type.ty
foo := func(s: string) -> string {
	return "hello, world"
}

foo:bar := func() {}